change: seperable decoder layers to convolution

--- a/code/model_training.ipynb
+++ b/code/model_training.ipynb
@@ -230,7 +230,7 @@
     "    filters = 16\n",
     "    \n",
     "    # Encoder\n",
-    "    l0 = separable_conv2d_batchnorm(inputs, filters, strides=1, kernel=1)\n",
+    "    l0 = conv2d_batchnorm(inputs, filters, strides=1, kernel=1)\n",
     "    \n",
     "    l1 = encoder_block(l0, filters)\n",
     "    l2 = encoder_block(l1, filters * 2)\n",
@@ -247,12 +247,12 @@
     "    \n",
     "    # add a skip connection between the encoder and decoder\n",
     "    x = layers.concatenate([x, l1])\n",
-    "    x = separable_conv2d_batchnorm(x, filters, strides=1, kernel=1)\n",
+    "    x = conv2d_batchnorm(x, filters, strides=1, kernel=1)\n",
     "    x = decoder_block(x, filters)\n",
     "    \n",
     "    # add a skip connection between the encoder input and the decoder\n",
     "    x = layers.concatenate([x, inputs]) \n",
-    "    x = separable_conv2d_batchnorm(x, filters, strides=1, kernel=1)\n",
+    "    x = conv2d_batchnorm(x, filters, strides=1, kernel=1)\n",
     "    \n",
     "    # The function returns the output layer of your model. \"x\" is the final layer obtained from the last decoder_block()\n",
     "    return layers.Conv2D(num_classes, 1, activation='softmax', padding='same')(x)"
